static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap');
html {
    height: 100%;
}

body {
    background: url('/media/home_bg.jpg') no-repeat center center fixed;
    background-size: contain;
    width: auto;
}

ul {
    margin-bottom: 0px;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
  }
  
  /* fixed top navbar only on medium and up */
  @media (min-width: 992px) {
      .fixed-top-desktop-only {
          position: fixed;
          top: 0;
          right: 0;
          left: 0;
          z-index: 1030;
      }

      .nav-bg-color {
          background-color: #88daf3;
      }

.logo-font {
    font-family: DM Serif Text;
    text-shadow: 2px 2px #000;
}

.nav-font {
    font-family: Quicksand;
    text-shadow: 2px 2px #000;
    font-size: 1.5em;
}

.index-font {
    Font-family: Quicksand;
    Font-size: 4em;
}

.dropdown-font {
    font-family: Quicksand;
    font-weight: 700;
}

